# cps

./: .gitignore  AddFileTest.txt  README.md  example.txt  pyproject.toml  setup.py
.github/workflows/: install_and_test.yml
cps/: PlotSpec.py  __init__.py  data_source.py
doc/source/: conf.py
test/: test_data_source.py  test_module.py
