[tool.poetry]
name = "cps"
version = "0.1.0"
description = ""
authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
astroquery = "^0.4.1"
numpy = "^1.19.4"
scipy = "^1.5.4"
astropy = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
